--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -10,8 +10,8 @@ on:
     branches: [ "main", "dev" ]
 
 jobs:
-  build:
-
+  test:
+    name: Test Python ${{ matrix.python-version }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -38,3 +38,20 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+  
+  # Summary job that depends on all test jobs
+  tests-complete:
+    name: All Tests Complete
+    runs-on: ubuntu-latest
+    needs: test
+    if: always()
+    steps:
+      - name: Check test results
+        run: |
+          if [[ "${{ needs.test.result }}" == "success" ]]; then
+            echo "All tests passed successfully!"
+            exit 0
+          else
+            echo "Some tests failed!"
+            exit 1
+          fi
